--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" type="image/svg+xml" href="favicon.svg" />
     <link rel="manifest" href="manifest.json" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <title>react app</title>
+    <title>Web Notes</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
