--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -2,9 +2,11 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>edit note</title>
+    <link rel="stylesheet" href="index.css" />
+    <title>New Memo</title>
   </head>
   <body>
     <div id="root"></div>
+    <script type="module" src="index.js"></script>
   </body>
 </html>
