--- a/sidebar/index.html
+++ b/sidebar/index.html
@@ -7,6 +7,7 @@
   </head>
   <body>
     <div id="root"></div>
+    <script src="colorMode.js"></script>
     <script type="module" src="index.js"></script>
   </body>
 </html>
